--- a/.drone.yml
+++ b/.drone.yml
@@ -15,22 +15,11 @@ trigger:
     - master
 
 steps: # 定义管道的执行步骤
-  - name: build
-    image: none
-    volumes:
-      - name: build
-        path: /build
-    commands:
-      - cp ./* /build
-      - cd /build
-      - docker build -t drone-test:1.0.0 .
-      - docker run -d -p 8080:80 --name drone-test drone-test:1.0.0
-    
-
   - name: deploy # 步骤名称
     image: nginx # 当前步骤使用的镜像
     depends_on: [clone] # 依赖的步骤
     commands: # 当前步骤执行的命令
+      - cp default.conf /etc/nginx/conf.d/default.conf 
       - cp -r ./index.html /usr/share/nginx/html/
     when:
       event: [push]
