--- a/.drone.yml
+++ b/.drone.yml
@@ -21,6 +21,9 @@ steps: # 定义管道的执行步骤
     commands: # 当前步骤执行的命令
       - cp default.conf /etc/nginx/conf.d/default.conf 
       - cp -r ./index.html /usr/share/nginx/html/
+    volumes:
+      - name: build
+        path: ./
     when:
       event: [push]
       status: [success, failure]
